Add: showFirstCard method and test for said method. Switched argument in showFirstCard method from 0 to getfirst().